--- a/Prevu.Synoptics.V3001-COVERIS/P230.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P230.xaml
@@ -412,5 +412,6 @@
             VerticalAlignment="Top" Height="55" Width="94" TextAlignment="Center" 
             FontSize="20" Foreground="White" d:IsLocked="True"><Run Text="External"/><LineBreak/><Run Text="Interface"/></TextBlock>
         <Labels:DetailsLabel HorizontalAlignment="Left" Margin="1001,370,0,0" VerticalAlignment="Top" ComponentName="320-HYD" DetailsPageName="D320" />
+        <Labels:DetailsLabel HorizontalAlignment="Left" Margin="939,252,0,0" VerticalAlignment="Top" ComponentName="320-VIEW" DetailsPageName="D320" HideComponentName="True"/>
     </Grid>
 </UserControl>
