--- a/Prevu.Synoptics.V3001-COVERIS/P330.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P330.xaml
@@ -9,7 +9,7 @@
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid Margin="-1,0,1,0">
         <Labels:Pipe HorizontalAlignment="Left" Margin="203,564,0,0" VerticalAlignment="Top" Width="62" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="332-21-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="207,346,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="330" StatusComponent="330-22-CV1" PipeHeight="Medium" Height="18">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="207,346,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="330" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="18" VisibilityComponent="330-22-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -43,7 +43,7 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" Margin="529,692,0,0" VerticalAlignment="Top" Width="741" StatusComponent="331-01-MA1" PipeHeight="Medium"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="722,447,0,0" VerticalAlignment="Top" Width="62" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="337-21-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="787,284,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="210" StatusComponent="335-22-CV1" PipeHeight="Medium" Height="20">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="787,284,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="210" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="20" VisibilityComponent="335-22-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -108,7 +108,7 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" Margin="1156,671,0,0" VerticalAlignment="Top" Width="133" StatusComponent="336-01-MA1" PipeHeight="Medium"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="269,80,0,0" VerticalAlignment="Top" Width="103" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="20"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="345,115,0,0" VerticalAlignment="Top" Width="54" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="22" VisibilitySignal="LS1" VisibilityComponent="326-21-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="345,115,0,0" VerticalAlignment="Top" Width="54" StatusComponent="322-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="22" VisibilitySignal="LS1" VisibilityComponent="326-21-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -118,8 +118,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="381,80,0,0" VerticalAlignment="Top" Width="516" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="21" VisibilitySignal="LS2" VisibilityComponent="326-21-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="861,106,0,0" VerticalAlignment="Top" Width="62" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="22" VisibilitySignal="LS2" VisibilityComponent="326-21-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="381,80,0,0" VerticalAlignment="Top" Width="516" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="21" VisibilitySignal="LS2" VisibilityComponent="326-21-CV1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="861,106,0,0" VerticalAlignment="Top" Width="62" StatusComponent="322-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="22" VisibilitySignal="LS2" VisibilityComponent="326-21-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
