--- a/Prevu.Synoptics.V3001-COVERIS/D320_2.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/D320_2.xaml
@@ -19,7 +19,17 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="127,110,0,0" VerticalAlignment="Top" Color="Oil" Width="127" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="320-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Center" Margin="0,242,0,0" VerticalAlignment="Top" Color="Oil" Width="246" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="320-01-MA1">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="128,110,0,0" VerticalAlignment="Top" Color="Oil" Width="127" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="320-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -49,17 +59,15 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" Margin="0,242,0,0" VerticalAlignment="Top" Color="Oil" Width="246" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="320-01-MA1">
-            <Labels:Pipe.RenderTransform>
+        <Rectangle HorizontalAlignment="Left" Height="2" Margin="114,89,0,0" Stroke="Black" VerticalAlignment="Top" Width="54" RenderTransformOrigin="0.5,0.5">
+            <Rectangle.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
+                    <ScaleTransform/>
                     <SkewTransform/>
-                    <RotateTransform Angle="0"/>
+                    <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Rectangle HorizontalAlignment="Left" Height="2" Margin="114,89,0,0" Stroke="Black" VerticalAlignment="Top" Width="54" RenderTransformOrigin="0.5,0.5">
+            </Rectangle.RenderTransform>
             <d:Rectangle.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
