--- a/Prevu.Synoptics.V3001-COVERIS/D810_2.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/D810_2.xaml
@@ -9,15 +9,6 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}" Height="425" Width="490">
     <Grid>
-        <Machines:VRC_WaterCollectingTank HorizontalAlignment="Center" Margin="0,295,0,0" VerticalAlignment="Top" Height="94" Width="254"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-         Margin="261,169,0,0" 
-         VerticalAlignment="Top" 
-         ComponentName="810-02-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-         Margin="139,169,0,0" 
-         VerticalAlignment="Top" 
-         ComponentName="810-01-MA1" Height="50"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="164,175,0,0" VerticalAlignment="Top" Color="Oil" Width="158" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="810-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -28,7 +19,27 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="127,110,0,0" VerticalAlignment="Top" Color="Oil" Width="127" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="810-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Center" Margin="0,242,0,0" VerticalAlignment="Top" Color="Oil" Width="251" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="810-01-MA1">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="110,264,0,0" VerticalAlignment="Top" Color="Oil" Width="58" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="810-01-MA1">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="128,110,0,0" VerticalAlignment="Top" Color="Oil" Width="127" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="810-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -48,27 +59,15 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="110,264,0,0" VerticalAlignment="Top" Color="Oil" Width="58" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="810-01-MA1">
-            <Labels:Pipe.RenderTransform>
+        <Rectangle HorizontalAlignment="Left" Height="2" Margin="114,89,0,0" Stroke="Black" VerticalAlignment="Top" Width="54" RenderTransformOrigin="0.5,0.5">
+            <Rectangle.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
+                    <ScaleTransform/>
                     <SkewTransform/>
                     <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" Margin="0,242,0,0" VerticalAlignment="Top" Color="Oil" Width="246" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="810-01-MA1">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Rectangle HorizontalAlignment="Left" Height="2" Margin="114,89,0,0" Stroke="Black" VerticalAlignment="Top" Width="54" RenderTransformOrigin="0.5,0.5">
+            </Rectangle.RenderTransform>
             <d:Rectangle.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -80,6 +79,7 @@
         </Rectangle>
         <Ellipse HorizontalAlignment="Left" Height="16" Margin="133,111,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
         <Machines:EXC_Air HorizontalAlignment="Left" Margin="276,239,0,0" VerticalAlignment="Top" Height="27" Width="60"/>
+        <Machines:VRC_WaterCollectingTank HorizontalAlignment="Center" Margin="0,295,0,0" VerticalAlignment="Top" Height="94" Width="254"/>
         <Machines:WaterPump HorizontalAlignment="Left" Margin="159,219,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="66" Width="50" Color="Oil">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
@@ -91,12 +91,20 @@
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-         Margin="98,27,0,0" 
-         VerticalAlignment="Top" 
-         ComponentName="810-41-PT1"/>
+            Margin="96,40,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="810-41-PT1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="261,173,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="810-02-MA1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="139,173,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="810-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
-         Margin="0,317,0,0" 
-         VerticalAlignment="Top" 
-         ComponentName="810-42-TT1"/>
+            Margin="0,317,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="810-42-TT1"/>
     </Grid>
 </UserControl>
