Add machine images

--- a/Prevu.Drawings/Machines/Separation/SAB_DiskSeparator.xaml
+++ b/Prevu.Drawings/Machines/Separation/SAB_DiskSeparator.xaml
@@ -19,7 +19,12 @@
                 </Path>
                 <Rectangle  Canvas.Left="30.5529" Canvas.Top="24.6361" Width="45.5989" Height="14.9376" RadiusX="2.35856" RadiusY="2.35856" Name="rect4" Fill="#FF424242" StrokeThickness="1.57237" Stroke="#FF424242">
                     <Rectangle.RenderTransform>
-                        <RotateTransform Angle="32.4737 30.5529 24.6361" CenterX="2.35856"/>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform/>
+                            <RotateTransform Angle="32.855"/>
+                            <TranslateTransform/>
+                        </TransformGroup>
                     </Rectangle.RenderTransform>
                 </Rectangle>
                 <Path  Name="path6" Fill="#FF9E9E9E" StrokeThickness="1.57237" Stroke="#FF9E9E9E" Opacity="0.84">
@@ -39,7 +44,12 @@
                 </Path>
                 <Rectangle  Canvas.Left="71.02" Canvas.Top="50.271" Width="45.5989" Height="14.9376" RadiusX="2.35856" RadiusY="2.35856" Name="rect12" Fill="#FF424242" StrokeThickness="1.57237" Stroke="#FF424242">
                     <Rectangle.RenderTransform>
-                        <RotateTransform Angle="32.4737 71.02 50.271" CenterX="2.35856"/>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform/>
+                            <RotateTransform Angle="32.776"/>
+                            <TranslateTransform/>
+                        </TransformGroup>
                     </Rectangle.RenderTransform>
                 </Rectangle>
                 <Path  Name="path14" Fill="#FF9E9E9E" StrokeThickness="1.57237" Stroke="#FF9E9E9E" Opacity="0.84">
@@ -59,7 +69,12 @@
                 </Path>
                 <Rectangle  Canvas.Left="111.28" Canvas.Top="76.0287" Width="45.5989" Height="14.9376" RadiusX="2.35856" RadiusY="2.35856" Name="rect20" Fill="#FF424242" StrokeThickness="1.57237" Stroke="#FF424242">
                     <Rectangle.RenderTransform>
-                        <RotateTransform Angle="32.4737 111.28 76.0287" CenterX="2.35856"/>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform/>
+                            <RotateTransform Angle="32.465"/>
+                            <TranslateTransform/>
+                        </TransformGroup>
                     </Rectangle.RenderTransform>
                 </Rectangle>
                 <Path  Name="path22" Fill="#FF9E9E9E" StrokeThickness="1.57237" Stroke="#FF9E9E9E" Opacity="0.84">
