--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/D020.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/D020.xaml
@@ -7,6 +7,151 @@
 						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
-             Height="300" Width="400" d:Background="{DynamicResource MaterialDesignPaper}">
-	<Grid/>
+             Height="400" Width="500" d:Background="{DynamicResource MaterialDesignPaper}">
+    <Grid>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="38,232,0,0" VerticalAlignment="Top" Width="49" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="60,210,0,0" VerticalAlignment="Top" Width="122" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="271,138,0,0" VerticalAlignment="Top" Width="100" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="306,199,0,0" VerticalAlignment="Top" Width="126" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="213,0,0,0" VerticalAlignment="Center" Width="120" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="4">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="215,210,0,0" VerticalAlignment="Top" Width="30" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="218,232,0,0" VerticalAlignment="Top" Width="49" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Machines:CV_Valve HorizontalAlignment="Left" Margin="169,188,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="48" Width="56">
+            <Machines:CV_Valve.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:CV_Valve.RenderTransform>
+        </Machines:CV_Valve>
+        <Rectangle HorizontalAlignment="Left" Height="86" Margin="42,253,0,0" VerticalAlignment="Top" Width="376" Fill="Gray" RadiusX="15" RadiusY="15"/>
+        <Machines:WaterPump HorizontalAlignment="Left" Margin="297,105,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water">
+            <Machines:WaterPump.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="1"/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:WaterPump.RenderTransform>
+        </Machines:WaterPump>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+         Margin="152,58,0,0" 
+         VerticalAlignment="Top" 
+         ComponentName="020-22-CV1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+         Margin="261,270,0,0" 
+         VerticalAlignment="Top" 
+         ComponentName="020-42-TT1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+         Margin="64,270,0,0" 
+         VerticalAlignment="Top" 
+         ComponentName="020-11-R1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+         Margin="53,136,0,0" 
+         VerticalAlignment="Top" 
+         ComponentName="020-01-MA1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+         Margin="153,137,0,0" 
+         VerticalAlignment="Top" 
+         ComponentName="020-21-CV1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+         Margin="380,137,0,0" 
+         VerticalAlignment="Top" 
+         ComponentName="020-03-MA1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+         Margin="277,59,0,0" 
+         VerticalAlignment="Top" 
+         ComponentName="020-02-MA1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+         Margin="53,59,0,0" 
+         VerticalAlignment="Top" 
+         ComponentName="020-04-MA1"/>
+        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" Margin="142,278,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="68">
+            <Machines:SCW_ScrewConveyor_straight.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="-90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:SCW_ScrewConveyor_straight.RenderTransform>
+        </Machines:SCW_ScrewConveyor_straight>
+        <Machines:EXC_Air HorizontalAlignment="Left" Margin="329,197,0,0" VerticalAlignment="Top" Height="30" Width="81"/>
+        <Machines:WaterPump HorizontalAlignment="Left" Margin="73,178,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water">
+            <Machines:WaterPump.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="1"/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:WaterPump.RenderTransform>
+        </Machines:WaterPump>
+    </Grid>
 </UserControl>
