--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/D880.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/D880.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Prevu.Synoptics.D880"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,24 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
 						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
+             xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D880" 
              mc:Ignorable="d" 
-             Height="300" Width="400" d:Background="{DynamicResource MaterialDesignPaper}">
-	<Grid/>
+             Height="500" Width="600" d:Background="{DynamicResource MaterialDesignPaper}">
+    <Grid>
+        <Separation:FKS_FlakesSorter HorizontalAlignment="Center" Margin="0,52,0,52" Width="430" Loaded="FKS_FlakesSorter_Loaded"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" Margin="240,70,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSHA"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" Margin="240,134,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSH" />
+        <Labels:SignalLabel HorizontalAlignment="Left" Margin="222,207,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSL"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+         Margin="149,26,0,0" 
+         VerticalAlignment="Top" 
+         ComponentName="880-61-LEV"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="357,26,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="880-62-LEV"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" Margin="446,70,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSHA"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" Margin="446,134,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSH" />
+        <Labels:SignalLabel HorizontalAlignment="Left" Margin="428,207,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSL"/>
+    </Grid>
 </UserControl>
