--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/D997.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/D997.xaml
@@ -7,6 +7,65 @@
 						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
-             Height="300" Width="400" d:Background="{DynamicResource MaterialDesignPaper}">
-	<Grid/>
+             Height="400" Width="400" d:Background="{DynamicResource MaterialDesignPaper}">
+    <Grid>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+         Margin="109,274,0,0" 
+         VerticalAlignment="Top" 
+         ComponentName="997-61-BAG"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+         Margin="204,274,0,0" 
+         VerticalAlignment="Top" 
+         ComponentName="997-62-BAG"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+         Margin="157,330,0,0" 
+         VerticalAlignment="Top" 
+         ComponentName="997-65-BBF"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="222,94,0,0" VerticalAlignment="Top" Width="30" StatusComponent="898-01-MA1" PipeHeight="Medium" VisibilitySignal="997-25-ZS2"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="150,94,0,0" VerticalAlignment="Top" Width="32" StatusComponent="898-01-MA1" PipeHeight="Medium" VisibilitySignal="997-25-ZS1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="210,129,0,0" VerticalAlignment="Top" Width="80" StatusComponent="898-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="997-25-ZS2">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="114,129,0,0" VerticalAlignment="Top" Width="80" StatusComponent="898-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="997-25-ZS1">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Machines:DV_Diverter_T HorizontalAlignment="Left" Margin="166,48,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="82" Width="74">
+            <Machines:DV_Diverter_T.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="180"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:DV_Diverter_T.RenderTransform>
+        </Machines:DV_Diverter_T>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="159,12,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="997-25-CV1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="268,92,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="997-22-CV1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="46,92,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="997-21-CV1"/>
+        <Machines:BBF_BigBagFilling HorizontalAlignment="Left" Margin="195,142,0,0" VerticalAlignment="Top" Height="127" Width="110"/>
+        <Machines:BBF_BigBagFilling HorizontalAlignment="Left" Margin="99,142,0,0" VerticalAlignment="Top" Height="127" Width="110"/>
+    </Grid>
 </UserControl>
