--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/P018.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/P018.xaml
@@ -5,6 +5,7 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
+             xmlns:DCE="clr-namespace:Prevu.Drawings.Machines.DCE;assembly=Prevu.Drawings" 
              x:Class="Prevu.Synoptics.P018" mc:Ignorable="d"
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid RenderTransformOrigin="0.5,0.5">
@@ -16,6 +17,16 @@
                 <TranslateTransform/>
             </TransformGroup>
         </Grid.RenderTransform>
+        <Rectangle HorizontalAlignment="Left" Height="36" Margin="242,399,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5">
+            <Rectangle.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="-1"/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Rectangle.RenderTransform>
+        </Rectangle>
         <Labels:Pipe HorizontalAlignment="Left" Margin="852,585,0,0" VerticalAlignment="Top" Width="238" StatusComponent="031-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Loaded="Pipe_Loaded" Height="10">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -38,16 +49,6 @@
         </Labels:Pipe>
         <Rectangle HorizontalAlignment="Left" Height="33" Margin="931,683,0,0" VerticalAlignment="Top" Width="94" Fill="Gray" RadiusX="5" RadiusY="5"/>
         <Rectangle HorizontalAlignment="Left" Height="22" Margin="1000,683,0,0" VerticalAlignment="Top" Width="59" Fill="Gray"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="75,685,0,0" VerticalAlignment="Top" Width="35" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" Margin="810,331,0,0" VerticalAlignment="Top" Width="72" StatusComponent="022-01-MA1" PipeHeight="Medium" Height="14"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="438,298,0,0" VerticalAlignment="Top" Width="66" StatusComponent="020-22-CV1" PipeHeight="Medium"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="329,217,0,0" VerticalAlignment="Top" Width="84" StatusComponent="018-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
@@ -143,16 +144,6 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" Margin="824,540,0,0" VerticalAlignment="Top" Width="134" StatusComponent="180-01-MA1" PipeHeight="Medium"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="150,377,0,0" VerticalAlignment="Top" Width="111" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" Margin="966,470,0,0" VerticalAlignment="Top" Width="291" StatusComponent="031-01-MA1" PipeHeight="Medium"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="1188,411,0,0" VerticalAlignment="Top" Width="128" StatusComponent="031-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Loaded="Pipe_Loaded" Height="10">
             <Labels:Pipe.RenderTransform>
@@ -165,76 +156,6 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" Margin="618,333,0,0" VerticalAlignment="Top" Width="78" StatusComponent="021-01-MA1" PipeHeight="Medium"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="100,670,0,0" VerticalAlignment="Top" Width="95" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="284,584,0,0" VerticalAlignment="Top" Width="100" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="319,645,0,0" VerticalAlignment="Top" Width="126" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="226,643,0,0" VerticalAlignment="Top" Width="120" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="3,523,0,0" VerticalAlignment="Top" Width="297" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="227,670,0,0" VerticalAlignment="Top" Width="30" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="238,685,0,0" VerticalAlignment="Top" Width="35" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" Margin="1034,352,0,0" VerticalAlignment="Top" Width="78" StatusComponent="030-01-MA1" PipeHeight="Medium"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="574,214,0,0" VerticalAlignment="Top" Width="26" StatusComponent="025-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
@@ -246,7 +167,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="70,134,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="100" Width="98">
+        <Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="61,134,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="100" Width="98">
             <Machines:MaterialInletOutlet.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -262,16 +183,6 @@
                     <ScaleTransform/>
                     <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:CV_Valve.RenderTransform>
-        </Machines:CV_Valve>
-        <Machines:CV_Valve HorizontalAlignment="Left" Margin="182,648,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="48" Width="56">
-            <Machines:CV_Valve.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
@@ -301,33 +212,12 @@
         <Machines:NT_ConveyorBelt HorizontalAlignment="Left" Margin="1088,347,0,0" VerticalAlignment="Top" Height="1" Width="189"/>
         <Machines:Manual_selection HorizontalAlignment="Left" Margin="1120,272,0,0" VerticalAlignment="Top" Height="80" Width="38"/>
         <Machines:Buffer_belt HorizontalAlignment="Left" Margin="132,170,0,0" VerticalAlignment="Top" Height="70" Width="192"/>
-        <Machines:Radar HorizontalAlignment="Left" Margin="897,656,0,0" VerticalAlignment="Top" Height="36" Width="31"/>
-        <Rectangle HorizontalAlignment="Left" Height="86" Margin="34,699,0,0" VerticalAlignment="Top" Width="377" Fill="Gray" RadiusX="15" RadiusY="15"/>
-        <Machines:WaterPump HorizontalAlignment="Left" Margin="310,551,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water">
-            <Machines:WaterPump.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="1"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
-        <Machines:WaterPump HorizontalAlignment="Left" Margin="66,638,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water">
-            <Machines:WaterPump.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="1"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
+        <Machines:Radar HorizontalAlignment="Left" Margin="897,670,0,0" VerticalAlignment="Top" Height="36" Width="31"/>
         <Machines:Waste HorizontalAlignment="Left" Margin="1155,0,0,0" VerticalAlignment="Center" Height="46" Width="44"/>
         <Machines:Waste HorizontalAlignment="Left" Margin="671,245,0,0" VerticalAlignment="Top" Height="46" Width="44"/>
-        <Machines:Radar HorizontalAlignment="Left" Margin="226,259,0,0" VerticalAlignment="Top" Height="36" Width="31"/>
+        <Machines:Radar HorizontalAlignment="Left" Margin="228,259,0,0" VerticalAlignment="Top" Height="36" Width="31"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="1272,635,0,0" 
+            Margin="1230,635,0,0" 
             VerticalAlignment="Top" 
             JumpFromLabel="032-01-MA1" 
             JumpToLabel="050-01-MA1"/>
@@ -337,35 +227,31 @@
             JumpFromLabel="032-01-MA1" 
             JumpToLabel="180-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="165,533,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="020-22-CV1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="305,115,0,0" 
             VerticalAlignment="Top" 
             ComponentName="018-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="623,133,0,0" 
+            Margin="596,133,0,0" 
             VerticalAlignment="Top" 
             ComponentName="025-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="157,22,0,0" 
+            Margin="157,47,0,0" 
             VerticalAlignment="Top" 
             ComponentName="018-21-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="157,77,0,0" 
+            Margin="157,102,0,0" 
             VerticalAlignment="Top" 
             ComponentName="018-21-CV2" Height="50" Width="88"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="126,259,0,0" 
+            Margin="137,259,0,0" 
             VerticalAlignment="Top" 
             ComponentName="020-41-LT1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="672,358,0,0" 
+            Margin="699,358,0,0" 
             VerticalAlignment="Top" 
             ComponentName="022-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="484,358,0,0" 
+            Margin="511,358,0,0" 
             VerticalAlignment="Top" 
             ComponentName="021-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -389,51 +275,11 @@
             VerticalAlignment="Top" 
             ComponentName="030-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="274,716,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="020-42-TT1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="77,716,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="020-11-R1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="46,594,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="020-01-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="166,595,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="020-21-CV1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="400,595,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="020-03-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="290,505,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="020-02-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="803,651,0,0" 
+            Margin="803,661,0,0" 
             VerticalAlignment="Top" 
             ComponentName="032-41-LT1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-      Margin="46,534,0,0" 
-      VerticalAlignment="Top" 
-      ComponentName="020-04-MA1"/>
         <Machines:SB_Sfaldaballe HorizontalAlignment="Left" Margin="251,255,0,0" VerticalAlignment="Top" Height="189" Width="197"/>
-        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" Margin="155,724,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="68">
-            <Machines:SCW_ScrewConveyor_straight.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="-90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:SCW_ScrewConveyor_straight.RenderTransform>
-        </Machines:SCW_ScrewConveyor_straight>
-        <Machines:EXC_Air HorizontalAlignment="Left" Margin="342,657,0,0" VerticalAlignment="Top" Height="30" Width="81"/>
-        <Machines:EC_Metal_Detector HorizontalAlignment="Left" Margin="574,162,0,0" VerticalAlignment="Top" Height="29" Width="27"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="934,396,0,0" VerticalAlignment="Top" Width="36" StatusComponent="031-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="917,393,0,0" VerticalAlignment="Top" Width="58" StatusComponent="031-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -443,8 +289,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:Waste HorizontalAlignment="Left" Margin="930,0,0,0" VerticalAlignment="Center" Height="46" Width="44"/>
-        <Rectangle HorizontalAlignment="Left" Height="95" Margin="855,289,0,0" VerticalAlignment="Top" Width="196" Fill="Gray" RadiusX="15" RadiusY="15"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="1024,728,0,0" VerticalAlignment="Top" Width="54" StatusComponent="031-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -457,5 +301,8 @@
         </Labels:Pipe>
         <Machines:Waste HorizontalAlignment="Left" Margin="1029,736,0,0" VerticalAlignment="Top" Height="46" Width="44"/>
         <Machines:Buffer_belt HorizontalAlignment="Left" Margin="928,654,0,0" VerticalAlignment="Top" Height="70" Width="192" d:IsLocked="True"/>
+        <Labels:DetailsLabel HorizontalAlignment="Left" Margin="176,391,0,0" VerticalAlignment="Top" ComponentName="020-HYD" DetailsPageName="D020"/>
+        <DCE:VRR_DryTrommel Margin="840,290,369,437"/>
+        <Machines:Waste HorizontalAlignment="Left" Margin="924,0,0,0" VerticalAlignment="Center" Height="46" Width="44"/>
     </Grid>
 </UserControl>
