--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/P880.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/P880.xaml
@@ -313,23 +313,23 @@
           JumpFromLabel="880-01-EC1" 
           JumpToLabel="872-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="49,480,0,0" 
+            Margin="140,524,0,0" 
             VerticalAlignment="Top" 
             ComponentName="885-61-LEV"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="48,424,0,0" 
+            Margin="62,190,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="885-01-MA1"/>
+            ComponentName="885-01-MA1" Height="58" Width="89"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="624,500,0,0" 
+            Margin="534,545,0,0" 
             VerticalAlignment="Top" 
             ComponentName="887-61-LEV"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="624,444,0,0" 
+            Margin="611,215,0,0" 
             VerticalAlignment="Top" 
             ComponentName="887-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="825,414,0,0" 
+            Margin="735,453,0,0" 
             VerticalAlignment="Top" 
             ComponentName="883-61-LEV"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -341,7 +341,7 @@
             VerticalAlignment="Top" 
             ComponentName="896-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="825,358,0,0" 
+            Margin="696,119,0,0" 
             VerticalAlignment="Top" 
             ComponentName="883-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -349,31 +349,15 @@
             VerticalAlignment="Top" 
             ComponentName="883-62-BAG"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1072,684,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="997-61-BAG"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1167,684,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="997-62-BAG"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="1184,458,0,0" 
             VerticalAlignment="Top" 
             ComponentName="997-25-CV1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1246,534,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="997-22-CV1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="994,534,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="997-21-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="1246,187,0,0" 
             VerticalAlignment="Top" 
             ComponentName="900-71-ECS2"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-      Margin="1120,740,0,0" 
+      Margin="1120,684,0,0" 
       VerticalAlignment="Top" 
       ComponentName="997-65-BBF"/>
         <Machines:SCW_Flex_Verticale_DX HorizontalAlignment="Left" Margin="138,219,0,315"/>
@@ -418,6 +402,19 @@
             Margin="450,320,0,0" 
             VerticalAlignment="Top" 
             ComponentName="880-01-ECS3"/>
-        <Labels:DetailsLabel HorizontalAlignment="Left" Margin="474,194,0,0" VerticalAlignment="Top" ComponentName="880-VIEW" DetailsPageName="D880" HideComponentName="True"/>
+        <Labels:DetailsLabel HorizontalAlignment="Left" Margin="487,194,0,0" VerticalAlignment="Top" ComponentName="880-VIEW" DetailsPageName="D880" HideComponentName="True"/>
+        <Labels:DetailsLabel HorizontalAlignment="Left" Margin="1216,684,0,0" VerticalAlignment="Top" HideComponentName="True" ComponentName="997-VIEW" DetailsPageName="D997"/>
+        <Labels:DetailsLabel HorizontalAlignment="Left" Margin="236,525,0,0" VerticalAlignment="Top" ComponentName="885-VIEW" DetailsPageName="D885" HideComponentName="True"/>
+        <Labels:DetailsLabel HorizontalAlignment="Left" Margin="630,546,0,0" VerticalAlignment="Top" ComponentName="887-VIEW" DetailsPageName="D887" HideComponentName="True" RenderTransformOrigin="0.5,0.5">
+            <Labels:DetailsLabel.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:DetailsLabel.RenderTransform>
+        </Labels:DetailsLabel>
+        <Labels:DetailsLabel HorizontalAlignment="Left" Margin="830,453,0,0" VerticalAlignment="Top" ComponentName="883-VIEW" DetailsPageName="D883" HideComponentName="True"/>
     </Grid>
 </UserControl>
