--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/D997.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/D997.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Prevu.Synoptics.D997"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,24 +6,25 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
 						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
+             xmlns:Misc="clr-namespace:Prevu.Drawings.Machines.Misc;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D997" 
              mc:Ignorable="d" 
-             Height="400" Width="400" d:Background="{DynamicResource MaterialDesignPaper}">
+             Height="400" Width="500" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-         Margin="109,274,0,0" 
+         Margin="109,302,0,0" 
          VerticalAlignment="Top" 
          ComponentName="997-61-BAG"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-         Margin="204,274,0,0" 
+         Margin="204,302,0,0" 
          VerticalAlignment="Top" 
          ComponentName="997-62-BAG"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-         Margin="157,330,0,0" 
+         Margin="384,20,0,0" 
          VerticalAlignment="Top" 
          ComponentName="997-65-BBF"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="222,94,0,0" VerticalAlignment="Top" Width="30" StatusComponent="898-01-MA1" PipeHeight="Medium" VisibilitySignal="997-25-ZS2"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="150,94,0,0" VerticalAlignment="Top" Width="32" StatusComponent="898-01-MA1" PipeHeight="Medium" VisibilitySignal="997-25-ZS1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="210,129,0,0" VerticalAlignment="Top" Width="80" StatusComponent="898-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="997-25-ZS2">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="222,122,0,0" VerticalAlignment="Top" Width="30" StatusComponent="898-01-MA1" PipeHeight="Medium" VisibilitySignal="997-25-ZS2"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="150,122,0,0" VerticalAlignment="Top" Width="32" StatusComponent="898-01-MA1" PipeHeight="Medium" VisibilitySignal="997-25-ZS1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="210,157,0,0" VerticalAlignment="Top" Width="80" StatusComponent="898-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="997-25-ZS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -33,7 +34,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="114,129,0,0" VerticalAlignment="Top" Width="80" StatusComponent="898-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="997-25-ZS1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="114,157,0,0" VerticalAlignment="Top" Width="80" StatusComponent="898-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="997-25-ZS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -43,7 +44,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:DV_Diverter_T HorizontalAlignment="Left" Margin="166,48,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="82" Width="74">
+        <Machines:DV_Diverter_T HorizontalAlignment="Left" Margin="166,76,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="82" Width="74">
             <Machines:DV_Diverter_T.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -54,18 +55,23 @@
             </Machines:DV_Diverter_T.RenderTransform>
         </Machines:DV_Diverter_T>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="159,12,0,0" 
+            Margin="159,44,0,0" 
             VerticalAlignment="Top" 
             ComponentName="997-25-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="268,92,0,0" 
+            Margin="268,120,0,0" 
             VerticalAlignment="Top" 
             ComponentName="997-22-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="46,92,0,0" 
+            Margin="46,120,0,0" 
             VerticalAlignment="Top" 
             ComponentName="997-21-CV1"/>
-        <Machines:BBF_BigBagFilling HorizontalAlignment="Left" Margin="195,142,0,0" VerticalAlignment="Top" Height="127" Width="110"/>
-        <Machines:BBF_BigBagFilling HorizontalAlignment="Left" Margin="99,142,0,0" VerticalAlignment="Top" Height="127" Width="110"/>
+        <Machines:BBF_BigBagFilling HorizontalAlignment="Left" Margin="195,170,0,0" VerticalAlignment="Top" Height="127" Width="110"/>
+        <Machines:BBF_BigBagFilling HorizontalAlignment="Left" Margin="99,170,0,0" VerticalAlignment="Top" Height="127" Width="110"/>
+        <Misc:SF_SafetyBarrier HorizontalAlignment="Left" Margin="66,239,0,89" Width="10"/>
+        <Rectangle HorizontalAlignment="Left" Height="1" Margin="76,262,0,0" Stroke="Black" VerticalAlignment="Top" Width="254"/>
+        <Misc:SF_SafetyBarrier HorizontalAlignment="Left" Margin="329,239,0,89" Width="10"/>
+        <TextBlock HorizontalAlignment="Left" Margin="148,216,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold" FontSize="22"><Run Language="it-it" Text="1"/></TextBlock>
+        <TextBlock HorizontalAlignment="Left" Margin="244,216,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold" FontSize="22" Text="2"/>
     </Grid>
 </UserControl>
