--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/P018.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/P018.xaml
@@ -17,7 +17,7 @@
                 <TranslateTransform/>
             </TransformGroup>
         </Grid.RenderTransform>
-        <Rectangle HorizontalAlignment="Left" Height="36" Margin="242,399,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5">
+        <Rectangle HorizontalAlignment="Left" Height="36" Margin="242,400,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
@@ -301,8 +301,12 @@
         </Labels:Pipe>
         <Machines:Waste HorizontalAlignment="Left" Margin="1029,736,0,0" VerticalAlignment="Top" Height="46" Width="44"/>
         <Machines:Buffer_belt HorizontalAlignment="Left" Margin="928,654,0,0" VerticalAlignment="Top" Height="70" Width="192" d:IsLocked="True"/>
-        <Labels:DetailsLabel HorizontalAlignment="Left" Margin="176,391,0,0" VerticalAlignment="Top" ComponentName="020-HYD" DetailsPageName="D020"/>
+        <Labels:DetailsLabel HorizontalAlignment="Left" Margin="156,454,0,0" VerticalAlignment="Top" ComponentName="020-HYD" DetailsPageName="D020"/>
         <DCE:VRR_DryTrommel Margin="840,290,369,437"/>
         <Machines:Waste HorizontalAlignment="Left" Margin="924,0,0,0" VerticalAlignment="Center" Height="46" Width="44"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="137,392,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="020-22-CV1"/>
     </Grid>
 </UserControl>
